--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1724,11 +1724,15 @@ body[dir="rtl"] .checkbox:checked,
   margin-top: auto !important;
   margin-bottom: auto !important;
 }
-.mt-6 {
-  margin-top: 1.5rem;
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 .mt-4 {
   margin-top: 1rem;
+}
+.mb-20 {
+  margin-bottom: 5rem;
 }
 .ml-1 {
   margin-left: 0.25rem;
@@ -1742,6 +1746,9 @@ body[dir="rtl"] .checkbox:checked,
 .mb-4 {
   margin-bottom: 1rem;
 }
+.mt-6 {
+  margin-top: 1.5rem;
+}
 .-mt-4 {
   margin-top: -1rem;
 }
@@ -1751,14 +1758,8 @@ body[dir="rtl"] .checkbox:checked,
 .-mb-4 {
   margin-bottom: -1rem;
 }
-.mb-24 {
-  margin-bottom: 6rem;
-}
-.mb-16 {
-  margin-bottom: 4rem;
-}
-.mb-20 {
-  margin-bottom: 5rem;
+.block {
+  display: block;
 }
 .flex {
   display: flex;
@@ -1774,49 +1775,43 @@ body[dir="rtl"] .checkbox:checked,
   height: -moz-fit-content;
   height: fit-content;
 }
-.h-6 {
-  height: 1.5rem;
-}
-.h-full {
-  height: 100%;
-}
-.h-24 {
-  height: 6rem;
-}
-.h-1\/4 {
-  height: 25%;
+.h-64 {
+  height: 16rem;
 }
 .h-10 {
   height: 2.5rem;
 }
-.h-5 {
-  height: 1.25rem;
-}
 .h-48 {
   height: 12rem;
 }
-.h-36 {
-  height: 9rem;
+.h-24 {
+  height: 6rem;
 }
-.h-72 {
-  height: 18rem;
+.h-full {
+  height: 100%;
 }
-.h-64 {
-  height: 16rem;
+.h-6 {
+  height: 1.5rem;
 }
-.w-screen {
-  width: 100vw;
+.h-1\/4 {
+  height: 25%;
+}
+.h-5 {
+  height: 1.25rem;
+}
+.h-auto {
+  height: auto;
 }
 .w-full {
   width: 100%;
+}
+.w-3\/5 {
+  width: 60%;
 }
 .w-fit {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-}
-.w-3\/4 {
-  width: 75%;
 }
 .w-2\/5 {
   width: 40%;
@@ -1827,26 +1822,17 @@ body[dir="rtl"] .checkbox:checked,
 .w-auto {
   width: auto;
 }
+.w-screen {
+  width: 100vw;
+}
+.w-3\/4 {
+  width: 75%;
+}
 .w-4\/5 {
   width: 80%;
 }
 .w-1\/2 {
   width: 50%;
-}
-.w-3\/5 {
-  width: 60%;
-}
-.w-2\/3 {
-  width: 66.666667%;
-}
-.w-1\/3 {
-  width: 33.333333%;
-}
-.w-24 {
-  width: 6rem;
-}
-.w-\[33\%\] {
-  width: 33%;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1878,12 +1864,6 @@ body[dir="rtl"] .checkbox:checked,
 .justify-between {
   justify-content: space-between;
 }
-.gap-4 {
-  gap: 1rem;
-}
-.gap-2 {
-  gap: 0.5rem;
-}
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -1891,10 +1871,10 @@ body[dir="rtl"] .checkbox:checked,
 .gap-y-12 {
   row-gap: 3rem;
 }
-.space-x-10 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -1906,20 +1886,15 @@ body[dir="rtl"] .checkbox:checked,
   margin-right: calc(2rem * var(--tw-space-x-reverse));
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1946,14 +1921,19 @@ body[dir="rtl"] .checkbox:checked,
   margin-right: calc(4rem * var(--tw-space-x-reverse));
   margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.rounded-xl {
-  border-radius: 0.75rem;
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.rounded-md {
+  border-radius: 0.375rem;
 }
 .rounded-\[11px\] {
   border-radius: 11px;
 }
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 .rounded-2xl {
   border-radius: 1rem;
@@ -1965,19 +1945,27 @@ body[dir="rtl"] .checkbox:checked,
   --tw-border-opacity: 1;
   border-color: hsl(var(--b3, var(--b2)) / var(--tw-border-opacity));
 }
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
 .bg-\[\#F6F9FE\] {
   --tw-bg-opacity: 1;
   background-color: rgb(246 249 254 / var(--tw-bg-opacity));
 }
-.p-px {
-  padding: 1px;
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .p-3 {
   padding: 0.75rem;
+}
+.p-px {
+  padding: 1px;
 }
 .p-0 {
   padding: 0px;
@@ -1985,21 +1973,9 @@ body[dir="rtl"] .checkbox:checked,
 .p-4 {
   padding: 1rem;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 .py-16 {
   padding-top: 4rem;
@@ -2013,31 +1989,40 @@ body[dir="rtl"] .checkbox:checked,
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
-.pt-4 {
-  padding-top: 1rem;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .pr-4 {
   padding-right: 1rem;
 }
-.pl-2 {
-  padding-left: 0.5rem;
-}
-.pb-4 {
-  padding-bottom: 1rem;
-}
 .pr-8 {
   padding-right: 2rem;
 }
-.pr-16 {
-  padding-right: 4rem;
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.pt-4 {
+  padding-top: 1rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
 }
 .text-left {
   text-align: left;
@@ -2045,29 +2030,28 @@ body[dir="rtl"] .checkbox:checked,
 .text-center {
   text-align: center;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.align-middle {
+  vertical-align: middle;
 }
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 .font-normal {
   font-weight: 400;
@@ -2589,12 +2573,20 @@ img {
     display: flex;
   }
 
+  .lg\:grid {
+    display: grid;
+  }
+
   .lg\:hidden {
     display: none;
   }
 
   .lg\:w-3\/4 {
     width: 75%;
+  }
+
+  .lg\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .lg\:w-\[65\%\] {
@@ -2609,12 +2601,8 @@ img {
     width: 33.333333%;
   }
 
-  .lg\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .lg\:w-\[80\%\] {
-    width: 80%;
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -2623,6 +2611,15 @@ img {
 
   .lg\:items-center {
     align-items: center;
+  }
+
+  .lg\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .lg\:gap-y-12 {
+    row-gap: 3rem;
   }
 
   .lg\:space-y-12 > :not([hidden]) ~ :not([hidden]) {
@@ -2643,12 +2640,6 @@ img {
     margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .lg\:space-y-5 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-  }
-
   .lg\:py-60 {
     padding-top: 15rem;
     padding-bottom: 15rem;
@@ -2657,6 +2648,11 @@ img {
   .lg\:py-24 {
     padding-top: 6rem;
     padding-bottom: 6rem;
+  }
+
+  .lg\:py-48 {
+    padding-top: 12rem;
+    padding-bottom: 12rem;
   }
 
   .lg\:text-3xl {
