--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,28 +16,29 @@ layout: default
   });
 </script>
 
-<div class="w-full olorengradient pb-4 mb-4 -mt-4">
-  <div id="navbar-content" class="m-auto w-4/5 lg:w-2/3 mb-4">
-    {% include navbar-colored-bg.html %} {% include cta-content.html %}
-  </div>
-</div>
 
 <div>
-  <article class="prose lg:prose-lg m-auto max-w-none w-4/5 lg:w-2/3 mt-4">
-    <h1 class="font-extrabold text-lg text-black text-center">
-      {{ page.title }}
-    </h1>
-
+  <article class="prose lg:prose-lg m-auto max-w-none w-3/5 mt-4">
     {% assign author = site.data.authors[page.author] %} {% assign words =
     page.content | strip_html | number_of_words %} {% assign ert = words |
     divided_by:250 | at_least: 1 %}
 
-    <h5 class="font-normal text-center -mt-8 mb-4">
-      By {{ author.name }} • Published {{ page.date | date: "%B %-d, %Y" }} • {{
-      ert }} min read
-    </h5>
+    <div class="flex flex-col space-y-4 mb-8">
+    <div class="flex flex-col space-y-2">
+      <h5 class="font-normal !text-secondary !text-lg">
+        {{ page.author }} • {{ page.date | date: "%B %-d, %Y" }} • {{
+        ert }} min read
+      </h5>
+      <h1 class="font-medium !text-4xl text-primary">
+        {{ page.title }}
+      </h1>
+    </div>
+    <h2 class="!font-normal !text-lg !text-secondary">
+      {{ page.excerpt }}
+    </h2>
+    </div>
 
-    <div class="collapse collapse-arrow border border-base-300 rounded-2xl">
+    <!-- <div class="collapse collapse-arrow border border-base-300 rounded-2xl">
       <input type="checkbox" />
       <div class="collapse-title text-xl font-medium leading-none">
         Table of Contents
@@ -46,8 +47,10 @@ layout: default
       <div class="collapse-content text-sm -mb-4 -mt-4">
         {{ content | toc_only }}
       </div>
-    </div>
+    </div> -->
 
-    {{ content }}
+    <div class="font-normal prose-h1:!text-xl prose-h2:!text-lg prose-h3:!text-base prose-headings:font-medium prose-headings:!text-primary !text-secondary prose-figcaption:text-center prose-figcaption:text-primary prose-figure:w-full">
+      {{ content }}
+    </div>
   </article>
 </div>
