--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="{{ "assets/css/main.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "assets/css/style.css" | relative_url }}">
     <script src="https://unpkg.com/feather-icons"></script>
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "ecglzxg0o6");
+  </script>
   </head>
   <body class="bg-white text-black">
 
